{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "InGame",
            "id": "076c6210-9e47-4035-aafb-06691b4968f2",
            "actions": [
                {
                    "name": "MovementInput",
                    "type": "Button",
                    "id": "a42f7daf-85e2-4b2f-88aa-990ef8ed5e12",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "991a9986-23b0-44e6-ab52-24dd705e6dca",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "5997de6c-210b-4a00-98ca-04ded18a691f",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementInput",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "54770cd3-f56b-4cd7-af02-bbd25683cf9b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "kb + m",
                    "action": "MovementInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "f16303bf-4344-4b60-8153-f0b9ec7b7fca",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "kb + m",
                    "action": "MovementInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1ca0b2f7-6d44-4c5b-a5d1-cbae03c0ba27",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "kb + m",
            "bindingGroup": "kb + m",
            "devices": []
        }
    ]
}